[gd_scene load_steps=12 format=2]

[ext_resource path="res://Data/Textures/Resources/wood.png" type="Texture" id=1]
[ext_resource path="res://Data/Textures/UI/Interaction/MachinePowerButtonIcon.png" type="Texture" id=2]
[ext_resource path="res://Data/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/InteractableObjectUI.gd" type="Script" id=4]
[ext_resource path="res://Data/Textures/UI/Interaction/MachineDismantleButtonIcon.png" type="Texture" id=5]
[ext_resource path="res://Data/Textures/UI/Interaction/MachinePowerLevel.png" type="Texture" id=6]
[ext_resource path="res://Data/Textures/UI/Interaction/WheelBoardingIcon.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.592157 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="InteractableMachine" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
label_cont = NodePath("PanelContainer/HBoxContainer/LeftContainer/VBoxContainer")
rad_progress = NodePath("NullObj")
gather_button = NodePath("NullObj")
inv_cont = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer")
power_icon_cont = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/PowerIconContainer")
retrieve_button = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer/Button")
power_button = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/PowerIconContainer/Button")
ingredient_cont = NodePath("PanelContainer/HBoxContainer/LeftContainer/VBoxContainer/GridContainer")
dismantle_button = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/DismantleIconContainer/Button")
add_all_ingredients_btn = NodePath("PanelContainer/HBoxContainer/LeftContainer/VBoxContainer/AddAllIngredientsButton")
status_container = NodePath("PanelContainer/HBoxContainer/RightContainer")
board_button_cont = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/BoardIconContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 512 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 520.0
margin_bottom = 512.0
custom_constants/separation = 0

[node name="LeftContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_constants/margin_top = 16
custom_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/LeftContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 512.0
custom_constants/separation = 8

[node name="Name" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="Type" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 240.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Type"

[node name="Tile" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 240.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 2 )
text = "Tile"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 240.0
margin_bottom = 168.0
rect_min_size = Vector2( 240, 0 )
columns = 2

[node name="AddAllIngredientsButton" type="Button" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 240.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Add All"

[node name="CenterContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 256.0
margin_top = 32.0
margin_right = 456.0
margin_bottom = 480.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( -1425, 89 )
size_flags_vertical = 4
custom_constants/margin_top = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/CenterContainer"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 432.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 164.0
margin_bottom = 416.0
size_flags_vertical = 4
custom_constants/separation = 16

[node name="InventoryContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 121.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ItemTypeIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer/Button"]
margin_right = 114.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer/Button/ItemTypeIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -41.0
margin_top = -21.0
margin_right = -1.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerIconContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 128.0
margin_bottom = 272.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/PowerIconContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 121.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true

[node name="PowerIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/PowerIconContainer/Button"]
margin_right = 114.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardIconContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 288.0
margin_right = 128.0
margin_bottom = 416.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/BoardIconContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 121.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true

[node name="BoardIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/BoardIconContainer/Button"]
margin_right = 114.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DismantleIconContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 128.0
margin_bottom = 416.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/DismantleIconContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 121.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true

[node name="DismantleIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/DismantleIconContainer/Button"]
margin_right = 114.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 456.0
margin_right = 520.0
margin_bottom = 512.0
custom_constants/margin_top = 16

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/RightContainer"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="NullObj" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer/AddAllIngredientsButton" to="." method="_on_AddAllIngredientsButton_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/InventoryContainer/Button" to="." method="_on_Retrieve_Button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/PowerIconContainer/Button" to="." method="_on_Power_Button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/BoardIconContainer/Button" to="." method="_on_BoardingButton_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/DismantleIconContainer/Button" to="." method="_on_Dismantle_Button_pressed"]
