[gd_scene load_steps=9 format=2]

[ext_resource path="res://Data/Textures/Resources/wood.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/InteractableObjectUI.gd" type="Script" id=2]
[ext_resource path="res://Data/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/RadialProgress.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.592157 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="InteractableResource" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
label_cont = NodePath("PanelContainer/HBoxContainer/LeftContainer/VBoxContainer")
rad_progress = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/RadialProgress")
gather_button = NodePath("PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/Button")
retrieve_button = NodePath("PanelContainer/HBoxContainer/RightContainer/InventoryContainer/Button")
power_button = NodePath("NullObj")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -256.0
margin_right = 512.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 512 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 512.0
custom_constants/separation = 0

[node name="LeftContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_constants/margin_top = 16
custom_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/LeftContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 512.0
custom_constants/separation = 8

[node name="Name" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="Type" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 240.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Type"

[node name="Tile" type="Label" parent="PanelContainer/HBoxContainer/LeftContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 240.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 2 )
text = "Tile"

[node name="CenterContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 256.0
margin_top = 72.0
margin_right = 768.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 0 )
rect_pivot_offset = Vector2( -1425, 89 )
size_flags_vertical = 8
custom_constants/margin_bottom = 56

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/CenterContainer"]
margin_right = 512.0
margin_bottom = 384.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 384.0
margin_bottom = 384.0
custom_constants/separation = 64

[node name="RadialProgress" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 256.0
margin_bottom = 256.0
tint_under = Color( 1, 1, 1, 0.392157 )

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 256.0
margin_bottom = 384.0
rect_min_size = Vector2( 256, 64 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Gather"

[node name="RightContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 768.0
margin_right = 1024.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
rect_pivot_offset = Vector2( -1425, 89 )

[node name="InventoryContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/RightContainer"]
margin_left = 64.0
margin_top = 192.0
margin_right = 192.0
margin_bottom = 320.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/RightContainer/InventoryContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 121.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ItemTypeIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/RightContainer/InventoryContainer/Button"]
margin_right = 114.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="PanelContainer/HBoxContainer/RightContainer/InventoryContainer/Button/ItemTypeIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -41.0
margin_top = -21.0
margin_right = -1.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NullObj" type="Control" parent="."]
margin_left = 448.0
margin_top = 284.0
margin_right = 1472.0
margin_bottom = 796.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_InteractableResource_visibility_changed"]
[connection signal="ended" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/RadialProgress" to="." method="_on_RadialProgress_ended"]
[connection signal="halted" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/RadialProgress" to="." method="_on_RadialProgress_halted"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Gather_Button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/RightContainer/InventoryContainer/Button" to="." method="_on_Retrieve_Button_pressed"]
